# teleoperation_challenge

./: .gitignore  dockerfile  readme.md  start.sh  start_teleop.sh
.devcontainer/: devcontainer.json
install/: local_setup.sh  setup.bash  setup.sh  setup.zsh
install/dual_arm_servo_moveit_config/share/dual_arm_servo_moveit_config/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/dual_arm_servo_moveit_config/share/dual_arm_servo_moveit_config/cmake/: dual_arm_servo_moveit_configConfig-version.cmake  dual_arm_servo_moveit_configConfig.cmake
install/dual_arm_servo_moveit_config/share/dual_arm_servo_moveit_config/config/: hand.xacro  joint_limits.yaml  kinematics.yaml  left_arm_servo_config.yaml  left_hand_servo_config.yaml  left_initial_positions.yaml  moveit_controllers.yaml  ompl_planning.yaml  (+11 more)
install/teleop_dual_arm/lib/teleop_dual_arm/: teleop_node
install/teleop_dual_arm/share/teleop_dual_arm/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
log/: latest_build
src/dual_arm_servo_moveit_config/config/: left_arm_servo_config.yaml  left_hand_servo_config.yaml  panda.srdf  panda.urdf.xacro  panda_arm_macro.xacro  right_arm_servo_config.yaml  right_hand_servo_config.yaml  ros2_controllers.yaml
src/dual_arm_servo_moveit_config/launch/: left_servo.launch.py  move_group.launch.py  moveit.rviz  right_servo.launch.py
src/teleop_dual_arm/: package.xml  setup.cfg  setup.py
src/teleop_dual_arm/teleop_dual_arm/: teleop_node.py
(+8 files in other folders)
